fix url decoding method